# wasm-animated-background

./: PROJECT-SUMMARY.md  README.md  build-and-run.bat  build-and-run.sh  index.html  package-lock.json  package.json  performance-test.js  vite.config.js  wasm-test.js
src/: main.js  style.css
wasm_animation/: Cargo.toml
wasm_animation/src/: lib.rs
